# todo

./: .dockerignore  .env  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  build  build-image.Dockerfile  build.rs  docker-compose.yml  env.sh  run  run.sh  runwith_db.sh  tasks.sql  wait-for-it.sh  wait-for.sh
dumps/: 04-14-2020T10:56:00  11-27-2019T15:25:00
migrations/2020-06-14-231744_create_tables/: down.sql  up.sql
migrations/2020-07-03-170625_create_notes_table/: down.sql  up.sql
migrations/2020-11-10-215924_add_users/: down.sql  up.sql
migrations/2021-04-01-225243_add_tags/: up.sql
migrations/2021-09-23-005833_references_unique_by_child/: down.sql  up.sql
migrations/2022-01-28-200336_add_item_order/: down.sql  up.sql
src/: async_direct_cmd.rs  cal.rs  cmd.rs  lib.rs  main.rs  models.rs  old_task.rs  parser_cmd.rs  parser_help.rs  save.rs  schema.rs  task.rs  task_item.lalrpop  task_item.rs
src/actions/: item.rs  mod.rs  user.rs
src/models/: incoming_item.rs  item.rs  mod.rs  note.rs  reference.rs  responses.rs  tags.rs  task.rs  task_completions.rs  user.rs
src/routes/: items.rs  mod.rs  references.rs  user.rs
src/util/: child_order_range_error.rs  diesel_error.rs  errors.rs  mod.rs
