[package]
name = "to_do"
version = "0.1.0"
authors = ["Danny Boyd <odannyboyd@montara.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
lalrpop = "0.17.2"

[dependencies]
#hyper = "0.12"
chrono = { version = "0.4", features = ["serde"] }
ansi_term = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
lalrpop-util = "0.16.3"
regex = "0.2.1"
terminal_size = "0.1.8"

tokio-postgres = { version = "0.5.0-alpha.1", features = ["with-chrono-0_4"] }
futures-preview = "0.3.0-alpha.19"
tokio = "0.2.0-alpha.6"
