[package]
name = "to_do"
version = "0.1.0"
authors = ["Danny Boyd <odannyboyd@montara.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
lalrpop = "0.17.2"

[dependencies]
ansi_term = "0.9" # are we even using this any more? maybe can just go
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
futures-preview = { version = "0.3.0-alpha.19", features = ["io-compat"] } # stable at 0.2.2
hyper = { version = "0.13.0-alpha.2", features = ["unstable-stream"] } # 0.13.6
lalrpop-util = "0.16.3" # 1.19.0
regex = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = "0.2.0-alpha.6" # 0.2.21
tokio-postgres = { version = "0.5.0-alpha.1", features = ["with-chrono-0_4"] } # stable at 0.5.4
url = "1.0"
