[package]
name = "to_do"
version = "0.1.0"
authors = ["Danny Boyd <odannyboyd@montara.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
lalrpop = "0.17.2"

[dependencies]
ansi_term = "0.9" # are we even using this any more? maybe can just go
chrono = { version = "0.4", features = ["serde"] } 
diesel_migrations = "1.4.0" 
lalrpop-util = "0.16.3" # 1.19.0
regex = "0.2.1" 
url = "1.0" 

actix-rt = "1.1.0"
actix-cors = "0.5.1"
actix-web = "^3"

bytes = "0.5"
diesel = { version = "^1.1.0", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.7"
failure = "0.1.8"
futures = "0.3.1"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

rust-argon2 = "0.8"
getrandom = "0.2"
